--- a/react-social/package.json
+++ b/react-social/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
+    "@material-ui/core": "^3.9.4",
     "@material-ui/icons": "^3.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -11,6 +11,7 @@
     "react-router-dom": "^4.3.1",
     "react-s-alert": "^1.4.1",
     "react-scripts": "1.1.5",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
