--- a/react-social/package.json
+++ b/react-social/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.19.0",
     "react": "^16.5.2",
+    "react-beautiful-dnd": "^12.2.0",
     "react-dom": "^16.5.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
