--- a/react-social/package.json
+++ b/react-social/package.json
@@ -3,26 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.4",
+    "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.19.0",
-    "react": "^16.5.2",
-    "react-beautiful-dnd": "^12.2.0",
-    "react-dom": "^16.5.2",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
-    "react-s-alert": "^1.4.1",
-    "react-scripts": "1.1.5",
-    "react-textarea-autosize": "^7.1.2",
-    "redux": "^4.0.4",
-    "redux-persist": "^6.0.0",
+    "install": "^0.12.2",
+    "npm": "^6.8.0",
+    "react": "^16.8.3",
+    "react-beautiful-dnd": "^10.1.0",
+    "react-dom": "^16.8.3",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.5",
+    "react-spring": "^8.0.18",
+    "react-textarea-autosize": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.1.3",
+    "uuidv4": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "jquery": "^3.3.1"
   }
 }
