--- a/react-social/package.json
+++ b/react-social/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "antd": "^3.26.4",
     "install": "^0.12.2",
     "npm": "^6.8.0",
     "react": "^16.8.3",
