--- a/react-social/package.json
+++ b/react-social/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^4.7.1",
     "antd": "^3.26.4",
+    "bootstrap": "^4.4.1",
     "install": "^0.12.2",
+    "material-ui": "^1.0.0-beta.47",
+    "material-ui-popup-state": "^1.5.1",
     "npm": "^6.8.0",
     "react": "^16.8.3",
     "react-beautiful-dnd": "^10.1.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
@@ -17,6 +22,7 @@
     "react-scripts": "2.1.5",
     "react-spring": "^8.0.18",
     "react-textarea-autosize": "^7.1.0",
+    "reactstrap": "^8.2.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
