--- a/react-social/package.json
+++ b/react-social/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.7.1",
     "antd": "^3.26.4",
+    "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "install": "^0.12.2",
     "material-ui": "^1.0.0-beta.47",
@@ -26,6 +27,7 @@
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.1.3",
     "uuidv4": "^3.0.1"
   },
